bin/testsuite/tests/compiler/src/errors/compiler4043.swg
#global testerror "Err0734"
#test
{
    var a: func()
    var b: [..] s32
    var x  = a != b
}
